--- a/style.css
+++ b/style.css
@@ -21,8 +21,12 @@ body {
 
 .stats-container {
     display: flex;
+   cursor: pointer;
+   box-shadow: 0 0 30px;
 }
-
+.stats-container:hover{
+    color:lightblue;
+}
 .stats-card {
     background-color: #a8b0bc;
     border-radius: 7px;
