--- a/style.css
+++ b/style.css
@@ -77,3 +77,11 @@ button {
     margin: 1%;
     border-radius: 7px;
 }
+button:hover{
+    border-radius: 7px;
+    border: 3px solid darkslategray
+}
+button:focus{
+    background-color: lightblue;
+    color: black;
+}
